--- a/compose.yaml
+++ b/compose.yaml
@@ -11,16 +11,26 @@ services:
         - postgres_db
     ports:
       - "8000:8000"  # Expose container port 8000 to host port 8000  
-  api2:
+  # api2:
+  #   build:
+  #     context: ./microservice_02
+  #     dockerfile: Dockerfile.dev
+  #   volumes:
+  #     - ./microservice_02:/code  # Sync local development directory with the container
+  #   depends_on:
+  #       - postgres_db
+  #   ports:
+  #     - "8002:8000"  # Expose container port 8000 to host port 8000  
+  user_auth:
     build:
-      context: ./microservice_02
+      context: ./user_auth
       dockerfile: Dockerfile.dev
     volumes:
-      - ./microservice_02:/code  # Sync local development directory with the container
+      - ./user_auth:/code  # Sync local development directory with the container
     depends_on:
         - postgres_db
     ports:
-      - "8002:8000"  # Expose container port 8000 to host port 8000  
+      - "8002:8002"  # Expose container port 8000 to host port 8000  
   postgres_db:
     image: postgres:latest  # Use the official PostgreSQL image
     restart: always
